2013-03-18 17:53  Arno Onken  <asnelt@asnelt.org>

    * build-aux: Update all files in directory.

2013-03-16 21:48  Arno Onken  <asnelt@asnelt.org>

    * rrep.c, pattern.c: Silence compiler warnings.

2013-03-05 22:47  Arno Onken  <asnelt@asnelt.org>

    * lib: Replaced obsolete GNU Gnulib module strdup with
      strdup-posix.

2013-02-26 10:57  Arno Onken  <asnelt@asnelt.org>

	* rrep.in.1, rrep.texi: Reformatted documentation.
    * lib: Updated GNU Gnulib modules.

2011-07-31 19:39  Arno Onken  <asnelt@asnelt.org>

	* rrep.in.1: Bugfix for man-page.

2011-07-24 17:08  Arno Onken  <asnelt@asnelt.org>

	* rrep.c, messages.c: Add options for --suffix and --backup with
	  argument.

2011-07-06 18:17  Arno Onken  <asnelt@asnelt.org>

	* rrep.c: Make use of exclude.

2011-07-04 00:46  Arno Onken  <asnelt@asnelt.org>

	* bufferio.c: Add stdbool.
	* messages.c: Add stdbool, progname, propername and yesno.
	* messages.h: Make use of bool.
	* pattern.c: Add stdbool.
	* rrep.c: Add progname, backupfile, copy-file and getopt. Make use
	  of getopt_long
	* rrep.h: Remove boolean constants.
	* lib: Add GNU Gnulib modules.

2011-05-31 13:30  Arno Onken  <asnelt@asnelt.org>

	* rrep.c: Fix --keep-times option to include directories.
	* doc: Add info and man documentation.

2011-04-30 17:58  Arno Onken  <asnelt@asnelt.org>

	* Makefile.am (SUBDIRS): Add po.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): New variable.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
	* rrep.c: Rename option --prompt to --interactive and add option
	  for --binary.

2011-04-24 19:22  Arno Onken  <asnelt@asnelt.org>

	* messages.c, messages.h, rrep.c, rrep.h: Add option for
	  --keep-times.

2011-04-17 18:20  Arno Onken  <asnelt@asnelt.org>

	* messages.c, messages.h, pattern.c, rrep.c, rrep.h: Add options
	  for --include, --exclude, --exclude-dir, --backup, --dry-run and
	  --prompt.

2011-04-10 15:11  Arno Onken  <asnelt@asnelt.org>
