@@ -1,6 +1,7 @@
 Version 1.3.6
   - Silenced compiler warnings.
   - Updated all files in build-aux.
+  - Updated GNU Gnulib modules.
 
 Version 1.3.5
   - Replaced obsolete GNU Gnulib module strdup with strdup-posix.
