@@ -1,3 +1,7 @@
+2013-03-19 19:27  Arno Onken  <asnelt@asnelt.org>
+
+    * lib: Updated GNU Gnulib modules.
+
 2013-03-18 17:53  Arno Onken  <asnelt@asnelt.org>
 
     * build-aux: Update all files in directory.
